--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
-    "@vercel/kv": "^0.2.2",
+    "@prisma/client": "^5.2.0",
+    "@vercel/postgres": "^0.4.1",
     "autoprefixer": "^10.4.12",
     "framer-motion": "6.0.0",
     "next": "^12.3.1",
@@ -25,6 +26,7 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.2"
+    "babel-plugin-inline-react-svg": "^2.0.2",
+    "prisma": "^5.2.0"
   }
 }
