--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "@prisma/client": "^5.2.0",
+    "@vercel/analytics": "^1.0.2",
     "@vercel/postgres": "^0.4.1",
     "autoprefixer": "^10.4.12",
     "framer-motion": "6.0.0",
