--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss-import": "^13.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.1",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
