--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@vercel/postgres": "^0.4.1",
     "autoprefixer": "^10.4.12",
     "framer-motion": "6.0.0",
-    "next": "^12.3.1",
+    "next": "^12.3.4",
     "postcss": "^8.4.17",
     "postcss-import": "^13.0.0",
     "react": "^17.0.2",
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.46.1",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.1.8"
   },
