--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "prisma": "^5.2.0"
   }
